builds/tests/311/data/attachments/2d08604a5bf1accf.txt
2026-06-10 12:58:50,106 INFO     yoyo.migrations — Applying 0001_initial_schema
2026-06-10 12:58:50,107 INFO     yoyo.migrations —  - applying step 0
2026-06-10 12:58:50,107 INFO     yoyo.migrations —  - applying step 1
2026-06-10 12:58:50,107 INFO     yoyo.migrations —  - applying step 2
2026-06-10 12:58:50,108 INFO     yoyo.migrations —  - applying step 3
2026-06-10 12:58:50,108 INFO     yoyo.migrations —  - applying step 4
2026-06-10 12:58:50,108 INFO     yoyo.migrations —  - applying step 5
2026-06-10 12:58:50,108 INFO     yoyo.migrations —  - applying step 6
2026-06-10 12:58:50,109 INFO     yoyo.migrations —  - applying step 7
2026-06-10 12:58:50,109 INFO     yoyo.migrations —  - applying step 8
2026-06-10 12:58:50,109 INFO     yoyo.migrations —  - applying step 9
2026-06-10 12:58:50,109 INFO     yoyo.migrations —  - applying step 10
2026-06-10 12:58:50,109 INFO     yoyo.migrations —  - applying step 11
2026-06-10 12:58:50,110 INFO     yoyo.migrations —  - applying step 12
2026-06-10 12:58:50,110 INFO     yoyo.migrations —  - applying step 13
2026-06-10 12:58:50,110 INFO     yoyo.migrations —  - applying step 14
2026-06-10 12:58:50,112 INFO     yoyo.migrations — Marking 0001_initial_schema applied
2026-06-10 12:58:50,113 INFO     yoyo.migrations — Applying 0002_exchange_rates_source_target
2026-06-10 12:58:50,114 INFO     yoyo.migrations —  - applying step 0
2026-06-10 12:58:50,114 INFO     yoyo.migrations —  - applying step 1
2026-06-10 12:58:50,115 INFO     yoyo.migrations — Marking 0002_exchange_rates_source_target applied
2026-06-10 12:58:50,124 INFO     yoyo.migrations — Applying 0003_app_currencies
2026-06-10 12:58:50,125 INFO     yoyo.migrations —  - applying step 0
2026-06-10 12:58:50,126 INFO     yoyo.migrations — Marking 0003_app_currencies applied
2026-06-10 12:58:50,127 INFO     yoyo.migrations — Applying 0004_receipt_pipeline
2026-06-10 12:58:50,128 INFO     yoyo.migrations —  - applying step 0
2026-06-10 12:58:50,128 INFO     yoyo.migrations —  - applying step 1
2026-06-10 12:58:50,128 INFO     yoyo.migrations —  - applying step 2
2026-06-10 12:58:50,128 INFO     yoyo.migrations —  - applying step 3
2026-06-10 12:58:50,128 INFO     yoyo.migrations —  - applying step 4
2026-06-10 12:58:50,129 INFO     yoyo.migrations —  - applying step 5
2026-06-10 12:58:50,129 INFO     yoyo.migrations —  - applying step 6
2026-06-10 12:58:50,129 INFO     yoyo.migrations —  - applying step 7
2026-06-10 12:58:50,129 INFO     yoyo.migrations —  - applying step 8
2026-06-10 12:58:50,130 INFO     yoyo.migrations —  - applying step 9
2026-06-10 12:58:50,130 INFO     yoyo.migrations —  - applying step 10
2026-06-10 12:58:50,130 INFO     yoyo.migrations —  - applying step 11
2026-06-10 12:58:50,131 INFO     yoyo.migrations —  - applying step 12
2026-06-10 12:58:50,131 INFO     yoyo.migrations —  - applying step 13
2026-06-10 12:58:50,131 INFO     yoyo.migrations —  - applying step 14
2026-06-10 12:58:50,132 INFO     yoyo.migrations —  - applying step 15
2026-06-10 12:58:50,132 INFO     yoyo.migrations —  - applying step 16
2026-06-10 12:58:50,132 INFO     yoyo.migrations —  - applying step 17
2026-06-10 12:58:50,133 INFO     yoyo.migrations —  - applying step 18
2026-06-10 12:58:50,133 INFO     yoyo.migrations —  - applying step 19
2026-06-10 12:58:50,133 INFO     yoyo.migrations —  - applying step 20
2026-06-10 12:58:50,133 INFO     yoyo.migrations —  - applying step 21
2026-06-10 12:58:50,134 INFO     yoyo.migrations —  - applying step 22
2026-06-10 12:58:50,136 INFO     yoyo.migrations — Marking 0004_receipt_pipeline applied
2026-06-10 12:58:50,137 INFO     yoyo.migrations — Applying 0005_income_logging
2026-06-10 12:58:50,137 INFO     yoyo.migrations —  - applying step 0
2026-06-10 12:58:50,138 INFO     yoyo.migrations —  - applying step 1
2026-06-10 12:58:50,138 INFO     yoyo.migrations —  - applying step 2
2026-06-10 12:58:50,138 INFO     yoyo.migrations —  - applying step 3
2026-06-10 12:58:50,139 INFO     yoyo.migrations —  - applying step 4
2026-06-10 12:58:50,139 INFO     yoyo.migrations —  - applying step 5
2026-06-10 12:58:50,139 INFO     yoyo.migrations —  - applying step 6
2026-06-10 12:58:50,140 INFO     yoyo.migrations —  - applying step 7
2026-06-10 12:58:50,140 INFO     yoyo.migrations —  - applying step 8
2026-06-10 12:58:50,140 INFO     yoyo.migrations —  - applying step 9
2026-06-10 12:58:50,140 INFO     yoyo.migrations —  - applying step 10
2026-06-10 12:58:50,140 INFO     yoyo.migrations —  - applying step 11
2026-06-10 12:58:50,141 INFO     yoyo.migrations —  - applying step 12
2026-06-10 12:58:50,141 INFO     yoyo.migrations —  - applying step 13
2026-06-10 12:58:50,141 INFO     yoyo.migrations —  - applying step 14
2026-06-10 12:58:50,141 INFO     yoyo.migrations —  - applying step 15
2026-06-10 12:58:50,141 INFO     yoyo.migrations —  - applying step 16
2026-06-10 12:58:50,141 INFO     yoyo.migrations —  - applying step 17
2026-06-10 12:58:50,142 INFO     yoyo.migrations —  - applying step 18
2026-06-10 12:58:50,142 INFO     yoyo.migrations —  - applying step 19
2026-06-10 12:58:50,142 INFO     yoyo.migrations —  - applying step 20
2026-06-10 12:58:50,142 INFO     yoyo.migrations —  - applying step 21
2026-06-10 12:58:50,142 INFO     yoyo.migrations —  - applying step 22
2026-06-10 12:58:50,142 INFO     yoyo.migrations —  - applying step 23
2026-06-10 12:58:50,143 INFO     yoyo.migrations —  - applying step 24
2026-06-10 12:58:50,143 INFO     yoyo.migrations —  - applying step 25
2026-06-10 12:58:50,143 INFO     yoyo.migrations —  - applying step 26
2026-06-10 12:58:50,143 INFO     yoyo.migrations —  - applying step 27
2026-06-10 12:58:50,143 INFO     yoyo.migrations —  - applying step 28
2026-06-10 12:58:50,144 INFO     yoyo.migrations —  - applying step 29
2026-06-10 12:58:50,144 INFO     yoyo.migrations —  - applying step 30
2026-06-10 12:58:50,144 INFO     yoyo.migrations —  - applying step 31
2026-06-10 12:58:50,144 INFO     yoyo.migrations —  - applying step 32
2026-06-10 12:58:50,145 INFO     yoyo.migrations —  - applying step 33
2026-06-10 12:58:50,145 INFO     yoyo.migrations —  - applying step 34
2026-06-10 12:58:50,147 INFO     yoyo.migrations —  - applying step 35
2026-06-10 12:58:50,147 INFO     yoyo.migrations —  - applying step 36
2026-06-10 12:58:50,147 INFO     yoyo.migrations —  - applying step 37
2026-06-10 12:58:50,148 INFO     yoyo.migrations —  - applying step 38
2026-06-10 12:58:50,149 INFO     yoyo.migrations —  - applying step 39
2026-06-10 12:58:50,150 INFO     yoyo.migrations —  - applying step 40
2026-06-10 12:58:50,153 INFO     yoyo.migrations — Marking 0005_income_logging applied
2026-06-10 12:58:50,160 INFO     dinary.background.classification.task — Receipt drain: processing receipt_id=1
2026-06-10 12:58:50,161 ERROR    dinary.background.classification.task — Permanent error for receipt_id=1 — poisoning
Traceback (most recent call last):
  File "/home/runner/work/dinary/dinary/src/dinary/background/classification/task.py", line 221, in _process_job
    items = await asyncio.to_thread(_get_items, job.receipt_id)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/hostedtoolcache/Python/3.13.13/x64/lib/python3.13/asyncio/threads.py", line 25, in to_thread
    return await loop.run_in_executor(None, func_call)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/hostedtoolcache/Python/3.13.13/x64/lib/python3.13/concurrent/futures/thread.py", line 59, in run
    result = self.fn(*self.args, **self.kwargs)
  File "/home/runner/work/dinary/dinary/src/dinary/background/classification/task.py", line 511, in _get_items
    raise RuntimeError(
        f"receipt_id={receipt_id}: no items after parsing — parse error",
    )
RuntimeError: receipt_id=1: no items after parsing — parse error
